# tauri-rust-nuxt-template

./: .gitignore  .lintstagedrc  .prettierignore  .prettierrc.cjs  AGENTS.md  CLAUDE.md  README.md  commitlint.config.cjs  eslint.config.mjs  nuxt.config.ts  package.json  repack.config.cjs  tailwind.config.ts  tsconfig.json
.husky/: commit-msg
i18n/: i18n.config.ts
openspec/: config.yaml
openspec/changes/bootstrap-tauri-nuxt-rust/: design.md  proposal.md  tasks.md
openspec/specs/: README.md
src/: App.vue  i18n.config.ts  vue-shim.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: sys.ts
src/assets/stylesheet/: base.css  main.css  tailwind.css  theme.css
src/components/: DepthChart.vue  Footer.vue  Header.vue  OrderBook.vue
src/components/DeptchChart/: index.vue
src/composables/: useAssets.ts  useBinanceDepthStream.ts  useBinanceKlineStream.ts  useBinanceTradeStream.ts  useKlineEngine.ts  useMarketEngineWorker.ts  useMarketScanner.ts  useMessage.ts  useOrders.ts  useRuntimeBridge.ts  useSecureCredential.ts  useSpotMarkets.ts
src/filters/: dataThousands.ts  dateFormat.ts
src/http/: index.ts  useHttp.ts
src/lang/: ar-AE.json  en-US.json  ru-RU.json  zh-CN.json
src/layouts/: default.vue  trade.vue
src/middleware/: setup.global.ts
src/modules/: fix-nuxt-ui-imports.ts
src/pages/: index.vue  login.vue
src/pages/contract/: index.vue
src/pages/download/: index.vue
src/pages/spot/: index.vue
src/plugins/: wasm.client.ts
src/store/: runtimeEvent.ts
src/utils/: common.ts  constant.ts  formatDisplay.ts  themeTokens.ts
src/workers/: marketKlineWasm.worker.ts  orderBookWasm.worker.ts
types/: nuxt.d.ts  spotTypes.ts
(+34 files in other folders)
