[package]
name = "trading_desktop"
version = "0.1.0"
description = "Tauri desktop shell for nuxt trading console"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
keyring = "3.6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
"future-incompatible" = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = { level = "forbid", priority = 10 }
unused_must_use = { level = "deny", priority = 10 }

[lints.clippy]
all = { level = "warn", priority = 10 }
redundant_clone = { level = "deny", priority = 12 }
clone_on_copy = { level = "deny", priority = 12 }
manual_ok_or = { level = "warn", priority = 8 }
needless_collect = { level = "warn", priority = 8 }
